[package]
name = "web3_wallet_service"
version = "0.1.0"
edition = "2021"
description = "A modular Web3 wallet management service with multi-chain support"
authors = ["robust"]

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"
# IP-based rate limiting (governor pattern). Used to throttle /auth/login
# bruteforce and to provide a global per-IP cap.
actix-governor = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono", "rust_decimal"] }

# Blockchain
ethers = { version = "2", features = ["abigen", "ws"] }

# HTTP client with proxy support
reqwest = { version = "0.11", features = ["json", "socks"] }
url = "2"

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# JWT
jsonwebtoken = "9"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rolling-file = "0.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Time & decimal
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async traits
async-trait = "0.1"

# Futures
futures = "0.3"

# Hex encoding
hex = "0.4"

# Base64 encoding
base64 = "0.21"

# Base58 encoding (for Zcash/Bitcoin addresses)
bs58 = "0.5"

# SHA256/RIPEMD160 for address generation
sha2 = "0.10"
ripemd = "0.1"

# BLAKE2b for Zcash transaction hashing (ZIP 244)
blake2b_simd = "1.0"

# Zcash transaction primitives for proper sighash calculation
# Upgraded as a group 2026-04-25: orchard 0.11/0.12 and their zcash_* counterparts
# depended on core2, whose entire 0.3.x / 0.4.0 range was yanked from crates.io.
# The 2025+ Zcash stack migrated to `corez` (fork), so we bump the whole family
# together to restore reproducible builds.
zcash_primitives = "0.27"
zcash_protocol = "0.8"

# Zcash Orchard privacy protocol support
orchard = "0.13"
zcash_note_encryption = "0.4"
zcash_address = "0.11"
# zip32 was extracted out of zcash_primitives starting with 0.27
zip32 = "0.2"
pasta_curves = { version = "0.5", features = ["bits"] }
incrementalmerkletree = { version = "0.8", features = ["legacy-api"] }
subtle = "2.5"

# secp256k1 for key operations
secp256k1 = { version = "0.28", features = ["rand"] }

# Lazy static initialization
once_cell = "1.19"

[dev-dependencies]
actix-rt = "2"
dotenv = "0.15"

[[example]]
name = "backup_wallets"
path = "examples/backup_wallets.rs"
